--- a/blog/0102.md
+++ b/blog/0102.md
@@ -5,3 +5,14 @@ Distance:	69.8 miles
 Route:	tracks/2014-07-30.geojson
 ---
 
+![portrait](https://farm3.staticflickr.com/2928/14615177720_61860e9f2c.jpg "Worcester City Hall")
+
+![landscape](https://farm4.staticflickr.com/3916/14615344879_6937d3c5d7.jpg "Massachusetts farm")
+
+![landscape](https://farm4.staticflickr.com/3913/14801913785_38f1aa3fe1.jpg "Lowes at Lowe's")
+
+![landscape](https://farm4.staticflickr.com/3839/14821826413_ae3ae50dcc.jpg "Downtown Boston")
+
+![portrait](https://farm4.staticflickr.com/3906/14615262790_22706f7ce4.jpg "At the Atlantic Ocean. I haven't had time to shave.")
+
+![landscape](https://farm6.staticflickr.com/5589/14778975686_9071edcc95.jpg "Wheel in the Atlantic")
